[DSD-5464] Update pom.xml
Signed-off-by: VSIVAKALYAN <103260988+VSIVAKALYAN@users.noreply.github.com>